# rollrat-framework-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: rollrat-framework.h
include/rollrat-framework/: Algorithm.h  DateTime.h  File.h  Sorting.h  StringTools.h  WString.h  WStringBuffer.h  WStringBuilder.h
include/rollrat-framework/BigInteger/: BigFraction.h  BigInteger.h
include/rollrat-framework/Code/: Block.h  Type.h
include/rollrat-framework/Collections/: BinaryTree.h  Extension.h
lib/: CMakeLists.txt  DateTime.cpp  File.cpp  StringTools.cpp  WString.cpp  WStringBuffer.cpp  WStringBuilder.cpp
lib/BigInteger/: BigBase.cpp  BigFraction.cpp  BigInteger.cpp
lib/Crypto/: Crypto.cpp  Sha256.c
lib/Encoding/: Base64Encoding.cpp  UrlEncoding.cpp
rollrat-framework/: Algorithm.h  ChronoTimer.h  DateTime.cpp  DateTime.h  Defines.h  File.cpp  File.h  Random.h  Sorting.h  StringTools.cpp  WString.cpp  WString.h  WStringBuffer.cpp  WStringBuffer.h  WStringBuilder.cpp  rollrat-framework.sln
rollrat-framework/BigInteger/: BigBase.h  BigFraction.cpp  BigFraction.h  BigInteger.cpp  BigInteger.h
rollrat-framework/Collections/: Array.h  BinaryTree.h
rollrat-framework/Crypto/: Crypto.cpp
rollrat-framework/Encoding/: Base64Encoding.h  UrlEncoding.cpp  UrlEncoding.h
rollrat-framework/Math/: Polynomial.h
rollrat-framework/rollrat-framework/: rollrat-framework.vcxproj  rollrat-framework.vcxproj.filters  unistd.h
test/: CMakeLists.txt  Test.h  test-StringTools.cpp  test.cpp
util/: CMakeLists.txt  index.cpp  passgen.cpp  renamer.cpp
(+48 files in other folders)
